--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://McBreezy0.github.io/McBreezy0.github.io",
+  "homepage": "https://mcbreezy0.github.io/",
   "name": "portfolio-app",
   "version": "0.1.0",
   "private": true,
